2005-03-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Fixed Oid type check, thanks Manuel Fernandez Montecelo.
2005-03-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx:
  - Moved prepared statements execution from connection to transaction
 include/pqxx/result.hxx:
  - Documented some const_reverse_iterator assignments as tested
  - Full test coverage on result.hxx
 include/pqxx/util.hxx, test/test000.cxx:
  - Test most flexible version of separated_list<>()
  - Full test coverage on util.hxx
 test/test085.cxx:
  - New
  - Tests prepared statements
  - Full test coverage on prepared statements
2005-03-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
  - Fixed wrong bitshift for octal digit: 6, not 9--thanks thomasae@online.no
  - Use octal notation for all chars < 0x20
 test/test062.cxx:
  - Don't just compare unsigned char to char--signedness may differ
 tools/preprelease:
  - Create lib directory if it doesn't exist yet
2005-03-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test062.cxx:
  - Added non-ASCII bytes to test case, thanks thomasae@online.no
2005-03-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/libcompiler.h:
  - Moved NOMINMAX even further towards the top
2005-03-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems:
  - Added PQXX_HAVE_STRERROR_R
  - Added PQXX_STRERROR_R_INT
 configure.ac.in:
  - New option: --enable-thread-safety (enabled by default)
  - Check for strerror_r and its signature
 include/pqxx/largeobject.hxx:
  - Reason() functions take errno (as it was at time of failure) as argument
 src/largeobject.cxx:
  - Replaced calls to strerror() with strerror_r() where possible
  - Fixed possible polluted errno in error strings
  - Throw bad_alloc instead of runtime_error where appropriate
 src/util.cxx:
  - sleep_seconds() no longer uses non-threadsafe strerror()